<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cards of Evil Intent</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name: </string>
    <string name="name_hint">Username</string>
    <string name="host">Host Game</string>
    <string name="join">Join Game</string>
    <string name="server_name">Server Name: </string>
    <string name="server_password">Server Password: </string>
    <string name="server_password_hint">Optional</string>
    <string name="server_name_hint">Server name</string>
    <string name="optional">Optional</string>
    <string name="playing">Are you playing?</string>
    <string name="choose_expansions">Choose Expansions</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="black_card">This is a _______ black card.</string>
    <string name="white_card">Freakin awesome</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>
