<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <ListView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="17">

    </ListView>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/server_password_layout"
        android:layout_weight="2">

        <TextView
            android:id="@+id/server_password"
            android:text="@string/server_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF00FF"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/server_password"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/name_layout"
        android:layout_weight="2">

        <TextView
            android:id="@+id/name"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF00FF"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/edit_name"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:textSize="22sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/join_game"
        android:layout_weight="3"/>

</LinearLayout>