<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login$SplashFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/server_name_layout"
        android:layout_weight="2"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/server_name"
            android:text="@string/server_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF00FF"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/edit_server_name"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/server_password_layout"
        android:layout_weight="2"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/server_password"
            android:text="@string/server_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF00FF"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/edit_server_password"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/question_layout"
        android:layout_weight="2">

        <TextView
            android:id="@+id/question"
            android:text="@string/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF00FF"
            android:textSize="22sp"/>

        <Switch
            android:id="@+id/switch_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textOn="Yes"
            android:textOff="No"
            android:onClick="onToggleClicked"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/name_layout"
        android:layout_weight="2"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/name"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF00FF"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/edit_name"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:textSize="22sp"/>

    </LinearLayout>


    <Button
        android:id="@+id/button_expansions"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/choose_expansions"
        android:layout_weight="3"/>



    <ListView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">


    </ListView>


    <Button
        android:id="@+id/button_submit"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/create_game"
        android:layout_weight="3"/>


</LinearLayout>